Add GitHub Actions auto-deploy

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,12 @@
 # Flask secret key - generate a random string for production
-SECRET_KEY=your-secret-key-change-in-production
+SECRET_KEY=tL5|gG6*uR0
+
+# Deploy key for /git_pull route - set a random strong password
+# Usage: curl https://your-app.pythonanywhere.com/git_pull?key=<DEPLOY_KEY>
+DEPLOY_KEY=rG0?vX3,dU1+zJ1&mR9%
 
 # Database URL
-# Development (SQLite): leave empty or set to sqlite:///data.db
-# Production (PostgreSQL): Render will provide this automatically
+# Leave empty for SQLite (default for PythonAnywhere)
 DATABASE_URL=
 
 # Flask environment
